<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="5dp"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.9"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_myinfo_picture"
                android:layout_width="fill_parent"
                android:layout_height="110dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/my_btn_photo_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_my_name"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginRight="19dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_setting_line"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_firstname"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textColor="#00b569"
                    android:textColorHint="#ffffff" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_my_birth"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginRight="19dp"
                android:layout_weight="1"
                android:background="@drawable/my_setting_line"
                android:gravity="center_vertical"
                android:hint="@string/hint_birth"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#00b569"
                android:textColorHint="#ffffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_my_school"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginRight="19dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_setting_line"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_school"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#00b569"
                    android:textColorHint="#ffffff" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_my_email"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginRight="19dp"
                android:layout_weight="1"
                android:background="@drawable/my_setting_line"
                android:gravity="center_vertical"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="#00b569"
                android:textColorHint="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_pw"
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/et_my_password"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#88007000" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="#44ffffff" />

        <EditText
            android:id="@+id/et_edit_password"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/hint_edit_password"
            android:inputType="textUri"
            android:padding="10dp"
            android:textColor="#88007000" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="20dp"
        android:background="#33ffffff" />

    <Button
        android:id="@+id/bt_change"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/board_btn_submit"
        android:clickable="false"
        android:gravity="center"
        android:padding="0dp"
        android:text="변경 확인"
        android:textColor="#ccffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_edit_logout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/board_btn_submit"
        android:clickable="false"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/label_logout_confirm"
        android:textColor="#ccffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_secession"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/board_btn_submit"
        android:clickable="false"
        android:gravity="center"
        android:padding="0dp"
        android:text="탈퇴하기"
        android:textColor="#ccffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>