<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#7aba70"
            android:padding="4dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="로그인"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_login_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:padding="10dp"
                android:text="닫 기"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:layout_width="180dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="35dp"
                android:padding="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_textfield"
                android:orientation="vertical"
                android:padding="0dp" >

                <EditText
                    android:id="@+id/et_signup_Email"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#88007000" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:background="#33000000" />

                <EditText
                    android:id="@+id/textPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#88007000" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bt_cofirm_login_selector"
                android:clickable="false"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/label_confirm"
                android:textColor="#ddffffff"
                android:textSize="17sp"
                android:textStyle="bold" />
            <!--
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewFAQ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="문의하기"
                android:textColor="#66000000"
                android:textSize="15sp"
                android:layout_weight="1" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#44000000" />

            <TextView
                android:id="@+id/textViewTutorial"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="튜토리얼"
                android:textColor="#66000000"
                android:textSize="15sp"
                android:layout_weight="1" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#44000000" />

            <TextView
                android:id="@+id/textNeedSignUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/label_need_signup"
                android:textColor="#66000000"
                android:textSize="15sp" 
                android:layout_weight="1"/>
        </LinearLayout>
            -->
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="All Rights Reserved ®ihateflyingbugs.co"
            android:textColor="#22000000"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</LinearLayout>