<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login_logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_textf"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/tv_input_email"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#88007000"
                        android:paddingLeft="10dp"
                        android:layout_weight="1" />
                    
                    <Button
                        android:id="@+id/bt_id_check"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                       	android:background="@drawable/bt_check_id_selector"
                       	android:layout_margin="5dp"
                        android:text="중복확인" 
                        android:textColor="#8844aa44"
                        android:textSize="11dp"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:background="#33000000" />

                <EditText
                    android:id="@+id/tv_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textUri"
                        android:textColor="#88007000"
                    android:paddingLeft="10dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.2dp"
                    android:background="#33000000" />
				<LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="match_parent"
				    android:orientation="horizontal">
                <EditText
                    android:id="@+id/tv_input_paynum"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@null"
                        android:textColor="#88007000"
                    android:hint="결제번호"
                    android:inputType="textUri"
                    android:paddingLeft="10dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/bt_info_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_icon_qmark"
                    android:layout_marginRight="5dp"/>
              </LinearLayout>
            </LinearLayout>

            

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >

                <CheckBox
                    android:id="@+id/cb_utilization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:button="@drawable/radiobuttonselector"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tv_utilization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/cb_utilization"
                    android:text="이용 약관에 동의 합니다."
                    android:textColor="#66000000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cb_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:button="@drawable/radiobuttonselector"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tv_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/cb_collection"
                    android:text="개인 정보수집에 동의 합니다."
                    android:textColor="#66000000" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:clickable="false"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="ID 생성하기"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" 
                    android:background="@drawable/bt_cofirm_selector"/>
            </LinearLayout>
             <LinearLayout
         android:id="@+id/ll_singup_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
			
            <TextView
                android:id="@+id/tv_singup_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/label_already_signuped"
                android:textColor="#66000000"
                android:textSize="15sp"
                android:layout_weight="1" />
            
             <View
                android:layout_width="0.5dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#44000000" />
             
            <TextView
                android:id="@+id/tv_signup_FAQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="문의하기"
                android:textColor="#66000000"
                android:textSize="15sp"
                android:layout_weight="1" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>